--- a/css/main.css
+++ b/css/main.css
@@ -549,8 +549,12 @@ hr {
 	
 	}
 	
+	.textsection {
+	margin: 2em auto;
+	}
+	
 	.nav-button {
-   	display: inline-block;
+   
    float: right;
    margin: 1em 0 1em 0;
 	padding: 12px;
@@ -562,17 +566,43 @@ hr {
 	border: 1px solid #253698;
     }
     
+    .nav-button a {
+    text-decoration: none;
+    color: #253698;
+    }
+    
   
 	.big-nav {
 	display: none;
 	}
 	
 	.mobile-nav {
-	display: none;
-	background: #e5e5e5;
-	text-decoration: none;
-	padding: 0;
+	
+	background-color: white;
+	border-bottom: 1px solid #253698;
+	padding: 20px auto;
+	clear: both;
+
+	text-align: right;
+	
+	
 	}
+	
+	.mobile-nav li{
+		list-style: none;
+		padding: 12px;
+		
+		}
+		
+	.mobile-nav a {
+		text-decoration: none;
+		color: #253698;
+		font-size: 14px;
+		
+		text-transform: uppercase;
+			
+		}	
+	
 	
 #intro-text {
 	width: 100%;
@@ -580,7 +610,7 @@ hr {
 	position: relative;
 	margin-top: 2em;
 	font-weight: 400;
-	font-size: 14px;
+	font-size: 16px;
 	}
 	
 .introp{
@@ -621,7 +651,7 @@ margin: 2em auto;
 	}
 	
 #insidebox p {
-	font-size: 14px;
+	font-size: 16px;
 		}	
 
 #box {
@@ -636,15 +666,19 @@ margin: 2em auto;
 #explanation p{
 margin-top: 2em;
 width: 100%;
-font-size: 14px;
-	}	
+font-size: 16px;
+	}
+	
+#explanation {
+margin: 0;
+}		
 	
 .dishes, .majic, .feature {
 	width: 100%;
 	}	
 
 .dishes p, .majic p, .feature p{
-font-size: 14px;
+font-size: 16px;
 	}	
 .majicpattern {
 	width: 100%;
@@ -652,7 +686,7 @@ font-size: 14px;
 		
 .regions li {
 	font-size: 14px;
-	padding: 10px;
+	padding: 5px;
 	}		
 	
 .featureimg {
