--- a/css/main.css
+++ b/css/main.css
@@ -105,7 +105,7 @@ body {
 	}	
 	
 .ba-logo img{
-	width: 100px;
+	width: 120px;
 	float: left;
 }
 
@@ -172,6 +172,7 @@ header {
 	position:relative;
 	z-index: -1;
 	width:100%;
+	max-width: 1200px;
 
 }
 
