--- a/css/main.css
+++ b/css/main.css
@@ -491,6 +491,7 @@ hr {
 	margin-left: 16em;
 		z-index: 10;
 		position: absolute;
+		animation-delay: 1s;
 	
 	}
 	
@@ -523,6 +524,7 @@ hr {
 	margin: -2em 0 0 -5em ;
 		z-index: 10;
 		position: absolute;
+		animation-delay: 1s;
 	}	
 	
 
@@ -546,6 +548,7 @@ hr {
 	margin:-2em 0 0 5em;
 		z-index: 10;
 		position: absolute;
+		animation-delay: 1s;
 	
 	}
 	
