--- a/css/main.css
+++ b/css/main.css
@@ -848,6 +848,7 @@ padding-right: 12px;
 	.foodimage2, .foodimage1, .foodimage {
 	display:none;
 	}
+	
 	.mobile-nav li{
 		list-style: none;
 		padding: 12px;
@@ -890,6 +891,12 @@ padding-right: 12px;
 .thaivideo{
 	width: 100%;
 	}
+	
+	.imageset2, .imageset {
+	margin:0;
+	}
+	
+	
 	
 .boxtext p{
 width: 90%;
