--- a/css/main.css
+++ b/css/main.css
@@ -545,7 +545,7 @@ hr {
 	
 .foodimage2 img {
 	width: 25%;
-	margin:-2em 0 0 5em;
+	margin:4em 0 0 7em;
 		z-index: 10;
 		position: absolute;
 		animation-delay: 1s;
@@ -555,18 +555,37 @@ hr {
 	.thaipictures {
 	width: 50%;
 	float: right;
+	
 	}	
+	
+	
+	.thaipictures p{
+	text-align: center;
+	color: #1C2673;
+	font-size: 20px;
+	font-weight: 700;
+	
+	}
 	
 	
 
 	
 .imageset2 {
 	width: 100%;
-	margin: 4em auto;
+	margin: 4em auto 2em auto;
 	clear:both;
 	max-width: 1200px;
 	overflow: hidden;
 	}	
+	
+	.imageset3 {
+	width: 100%;
+	margin: 2em auto 2em auto;
+	clear:both;
+	max-width: 1200px;
+	overflow: hidden;
+	}	
+	
 	
 
 	
