--- a/css/main.css
+++ b/css/main.css
@@ -410,9 +410,10 @@ hr {
 	
 .bottomnav {
 	
-	margin: auto;
+	margin: 0 1em;
 	text-align: left;
 	float: left;
+	
 	
 }
 
@@ -763,9 +764,9 @@ text-align: center;
 	font-size: 12px;
 	color: gray;
 	width: 100%;
-	max-width: 1200px;
+	
 	padding: 10px;
-	margin: auto;
+	margin: 0 1em;
 	
 	clear: both;
 	}
