--- a/css/main.css
+++ b/css/main.css
@@ -283,7 +283,7 @@ display: block;
 
 	
 #ingredients {
-margin-top: 7em;
+margin-top: 7em 0 0 -1em;
 z-index: -100;
 position: absolute;
 width: 50%;
@@ -441,7 +441,7 @@ hr {
    ========================================================================== */
 
 	.exploreintro {
-	max-width: 1000px;
+	max-width: 1200px;
 	margin: 0 auto 2em auto;
 	text-align: center;
 	}
