--- a/css/main.css
+++ b/css/main.css
@@ -339,6 +339,18 @@ opacity: .7;
 	
 	}
 	
+.boxtextdish	p{
+	border: 1px solid #1C2673;
+	font-family: 'Karla', sans-serif;
+	color: #253698;
+	padding: 2px;
+	width: 15%;
+	text-transform: uppercase;
+	font-size: 12px;
+	text-align: center;
+	
+	
+	}
 .bottomsection {
 	margin: 4em auto 2em auto;
 	display: block;
@@ -957,7 +969,18 @@ margin: 2em auto;
 
 }
 
+.boxtextdish p{
+width: 90%;
+margin: 2em auto;
+	font-size: 14px;
 
+}
+
+
+.boxtextdish {
+margin: 4em auto 0 auto;
+	text-align: center;
+	}
 
 .boxtext {
 	margin: auto;
