--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,7 @@ opacity: .7;
 	text-transform: uppercase;
 	font-size: 12px;
 	text-align: center;
+	margin-top: 4em;
 	
 	
 	}
@@ -557,8 +558,8 @@ hr {
 	}
 	
 .foodimage2 img {
-	width: 25%;
-	margin:4em 0 0 7em;
+	width: 20%;
+	margin:3em 0 0 7em;
 		z-index: 10;
 		position: absolute;
 		animation-delay: 1s;
@@ -978,7 +979,7 @@ margin: 2em auto;
 
 
 .boxtextdish {
-margin: 4em auto 0 auto;
+margin: auto;
 	text-align: center;
 	}
 
