--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,7 @@ header {
 
 #explanation p{
 	font-family: 'Merriweather', 'Noto Serif', serif;
-	width: 48%;
+	width: 50%;
 	margin: 0;
 	float: right;
 	font-size: 18px;
@@ -302,7 +302,7 @@ z-index: -2;
 opacity: .7;
 }
 
-.x h1{
+.newregions h1{
 	text-align: center;
 	color: #1C2673;
 }
