--- a/css/main.css
+++ b/css/main.css
@@ -774,6 +774,8 @@ ul.img-list li:hover span.text-content {
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 20px;
+	font-weight: 700;
+	text-decoration: none;
 	
 	color: #1C2673;
 	}	
