--- a/css/main.css
+++ b/css/main.css
@@ -776,7 +776,7 @@ ul.img-list li:hover span.text-content {
 	font-size: 20px;
 	font-weight: 700;
 	text-decoration: none;
-	
+		cursor: pointer;
 	color: #1C2673;
 	}	
 	
